# Test5

./: BUILD_SYSTEM.md  README.md  app.js  index.html  manifest.json  package.json  styles.css  sw.js  test.js
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  unzip-flatten.yml
1.github/workflows/: build-macos.yml  build-windows.yml
assets/: assets.config.js
builds/android/: build.gradle  gradle.properties  settings.gradle
builds/android/app/: build.gradle  proguard-rules.pro
builds/android/app/src/main/: AndroidManifest.xml
builds/android/app/src/main/java/com/minimax/localaivoiceos/: AudioProcessingService.kt  MainActivity.kt
builds/android/app/src/main/java/com/minimax/localaivoiceos/ui/: MainScreen.kt
builds/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
builds/electron/: main.js  preload.js
builds/ios/: project.yml
builds/ios/NeuralVoiceOS/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
builds/ios/NeuralVoiceOS/Resources/: LaunchScreen.storyboard
builds/tauri/: Cargo.toml  tauri.conf.json
builds/tauri/src/: main.rs
config/: config.manager.js  default.json
css/: styles.css  variables.css
js/: history.manager.js  text.processor.js  voice.recognizer.js
lib/: audio.processor.js
local-builds/android/: README.md  build.sh  local.properties
local-builds/ios/: README.md  build.sh
local-builds/linux/: README.md  build.sh
local-builds/macos/: README.md  build.sh
local-builds/windows/: README.md  build.bat  build.ps1
scripts/: build.js  generate-icons.js
(+2 files in other folders)
